# invenio-dnb-urn

./: .editorconfig  .gitignore  AUTHORS.rst  LICENSE  README.md  README.rst  setup.cfg  setup.py  thesis_types.yaml
invenio-dnb-urn/: __init__.py  cli.py  config.py  oai.py
invenio-dnb-urn/provider/: __init__.py
invenio-dnb-urn/serialize/: __init__.py  epicur.py
invenio_dnb_urn/: __init__.py  config.py  errors.py  oai.py  utils.py  views.py
invenio_dnb_urn/provider/: __init__.py  dnburn.py
invenio_dnb_urn/serialize/: __init__.py  epicur.py  xmetadiss.py
