# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 University of Münster.
#
# Invenio-Dnb-Urn is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-dnb-urn
version = attr: invenio_dnb_urn.__version__
description = "InvenioRDM module so support DNB urn registration."
long_description = file: README.md
long_description_content_type = text/markdown
keywords = invenio rdm data model
license = MIT
author = University of Münster
author_email = gressho@uni-muenster.de
platforms = any
url = https://github.com/ulbmuenster/invenio-dnb-urn
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    arrow>=0.17.0
    citeproc-py-styles>=0.1.2
    citeproc-py>=0.6.0
    dcxml>=0.1.2
    dnb-urn-service>=0.1.3
    Faker>=2.0.3
    Flask>=2.2.0,<2.3.0
    flask-iiif>=0.6.2
    ftfy>=4.4.3,<5.0.0
    invenio-communities>=3.1.0
    invenio-drafts-resources>=0.18.2
    invenio-oaiserver>=2.1.0,<2.2.0
    invenio-pidstore>=1.2.3,<1.3.0
    invenio-vocabularies>=0.13.2
    invenio-rdm-records>=1.1.0,<2.0.0
    pytz>=2020.4
    pyyaml>=5.4.0

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-app>=1.3.4
    invenio-db[postgresql,mysql,versioning]>=1.0.14,<2.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-mock>=1.6.0
    sphinx>=4.2.0,<5
    tripoli~=2.0.0
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    invenio_dnb_urn = invenio_dnb_urn:InvenioSerializerXMetaDissPlus
invenio_base.api_apps =
    invenio_dnb_urn = invenio_dnb_urn:InvenioSerializerXMetaDissPlus
invenio_i18n.translations =
    invenio_dnb_urn = invenio_dnb_urn

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

#[compile_catalog]
#directory = invenio_invenio_serializer_epicur/translations/
#use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_dnb_urn/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_dnb_urn/translations/messages.pot
output-dir = invenio_dnb_urn/translations/

[update_catalog]
input-file = invenio_dnb_urn/translations/messages.pot
output-dir = invenio_dnb_urn/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_dnb_urn --cov-report=term-missing
testpaths = docs tests invenio_dnb_urn
